...
    <string name="no_journals">You have no journal entries at the moment.</string>
    <string name="title">Journal Title…</string>
    <string name="mange_journal_title">Journal</string>
    <string name="title_activity_manage_labels">Manage Labels</string>

    <string name="title_activity_view_journal_fullscreen">View Journal</string>
    <string name="action_labels">Labels</string>


    <!-- Google Sign In -->
    <string name="g_id">g_id</string>
    <string name="g_email">g_email</string>
    <string name="g_firstName">g_firstName</string>
    <string name="g_lastName">g_lastName</string>

    <!-- Validation -->
    <string name="journal_title_required">Please enter a title for your journal.</string>
    <string name="journal_content_required">Please enter some content for your journal.</string>
    <string name="action_signout">Sign out</string>
    <string name="label_name">Label name</string>
...
